# inlay-hints

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/ide/: Cargo.toml  t.t
crates/ide/src/: inlay_hints.rs  main.rs
crates/rust-analyzer/src/cli/: analysis_stats.rs
src/: main.rs
